# rigol-ds1000z

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  channel.html  display.html  genindex.html  ieee.html  index.html  objects.inv  oscope.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  timebase.html  trigger.html  utils.html  waveform.html
.github/workflows/: docs.yaml
_modules/: index.html  utils.html
_modules/src/: channel.html  display.html  ieee.html  oscope.html  timebase.html  trigger.html  waveform.html
_sources/: channel.rst.txt  display.rst.txt  oscope.rst.txt  timebase.rst.txt
docs/rigol_ds1000z/: channel.html  cli.html  display.html  ieee.html  index.html  rigol_ds1000z.html  timebase.html  utils.html  waveform.html
docs/source/: conf.py  ieee.rst  index.rst  rigol_ds1000z.rst  trigger.rst  utils.rst  waveform.rst
examples/: display_capture.ipynb  readme_example.ipynb  waveform_capture.csv  waveform_capture.ipynb
rigol_ds1000z/: __init__.py  channel.py  cli.py  ieee.py  rigol_ds1000z.py  utils.py
rigol_ds1000z/app/: channel_tui.py  display_tui.py  shortcuts.py  tablecontrol_tui.py  timebase_tui.py  trigger_tui.py  tui.py  waveform_tui.py
rigol_ds1000z/src/: channel.py  display.py  ieee.py  oscope.py  rigol_ds1000z.py  timebase.py  trigger.py  waveform.py
scripts/: cli.py
tests/: test_channel.py  test_cli.py  test_ieee.py  test_rigol_ds1000z.py  test_timebase.py  test_trigger.py  test_utils.py  test_waveform.py
